--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <h1> 🤗 </h1>
-  <model-viewer alt="break Artwork" ar ar-scale="fixed" src="https://github.com/NetanelRabinowitz/da3dai/releases/download/0.0/mira.usdz" ios-src="https://github.com/NetanelRabinowitz/da3dai/releases/download/0.0/mira.usdz"></model-viewer>
+  <model-viewer alt="break Artwork" ar ar-scale="fixed" src="mira.usdz" ios-src="mira.usdz"></model-viewer>
   </model-viewer>
 
 </body>
