--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <h1> 🤗 </h1>
-  <model-viewer alt="break Artwork" ar ar-scale="fixed" src="mira.usdz" poster="mira.png" ios-src="mira.usdz"></model-viewer>
+  <model-viewer alt="break Artwork" ar ar-scale="fixed" src="mira.usdz" poster="mira.jpg" ios-src="mira.usdz"></model-viewer>
   </model-viewer>
 
 </body>
