--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="author" content="Eisberg IT">
-  <meta name="description" content="Eisberg IT - Degorla - Break">
+  <meta name="author" content="Netanel Rabinowitz">
+  <meta name="description" content="frame">
 
   <title>:)</title>
 
